--- a/CustomBlog/src/main/resources/application.properties
+++ b/CustomBlog/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/custom_blog
+#spring.datasource.url=jdbc:postgresql://localhost:5432/custom_blog
+#spring.datasource.username=postgres
+#spring.datasource.password=1
+
+
+spring.datasource.password=Blog12345678
+spring.datasource.url=jdbc:postgresql://customblogdataserver.postgres.database.azure.com:5432/custom_blog?ssl=true&sslmode=require
 spring.datasource.username=postgres
-spring.datasource.password=1
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -10,3 +16,13 @@ server.error.include-message=always
 
 logging.level.org.springframework=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=customblog.webpage@gmail.com
+spring.mail.password=zrdtpxiqbcijqoan
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.from.email=customblog.webpage@gmail.com
+
